# .dotfiles

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  README.md  bootstrap.sh  install.sh  justfile  refresh.sh
claude/: CLAUDE.md  PERMISSIONS.md  WORKFLOW.md  claude-functions.zsh  settings.json  settings.local.json
docs/: secrets-server-setup.md  ssh-external-access.md  ssh-quick-reference.md  ssh-yubikey-setup.md
gemini/: GEMINI.md
ghostty/: config
git/: gitconfig  gitconfig.linux  gitconfig.macos
gnupg/: linux-gpg-agent.conf  macos-gpg-agent.conf  rpi-gpg-agent.conf  termux-gpg-agent.conf
home/: .chezmoi.yaml.tmpl  .chezmoidata.yaml  .chezmoiignore  .chezmoiremove  dot_gitconfig.tmpl  dot_vimrc  dot_zshenv.tmpl  dot_zshrc
home/dot_claude/exact_hooks-py/: pyproject.toml  test_hooks.py
home/dot_claude/exact_hooks-py/exact_src/exact_claude_hooks/: __init__.py  combined.py  constants.py  format.py  session.py  types.py  utils.py
home/dot_claude/exact_statusline/: pyproject.toml  statusline.py
install/: bootstrap.sh  clean.sh  hpc-install.sh  install.sh  lib.sh  macos-install.sh  nixos-install.sh  refresh.sh  rpi-install.sh  termux-install.sh  ubuntu-install.sh
kitty/: kitty.conf
neofetch/: desktop-neofetch.conf  termux-neofetch.conf
oh-my-posh/: README.md  config.json  setup.sh
pfetch/: desktop-pfetch.sh  runner.sh  termux-pfetch.sh
scripts/: README.md  doctor.sh  install_cf_ddns_macos.sh  lib-common.sh  load-secrets.sh  neofetch_random.sh  repo_to_text  setup_gpg_ssh.sh  (+7 more)
scripts/zen-nv/: pyproject.toml
scripts/zen-nv/src/zen_nv/: __init__.py  main.py
(+149 files in other folders)
