[project]
name = "zen-nv"
version = "0.1.0"
description = "A beautiful, riced GPU dashboard using nvitop and rich"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvitop>=1.6.0",
    "plotext>=5.3.2",
    "psutil>=7.1.3",
    "rich>=13.7.0",
    "textual>=6.6.0",
    "typer>=0.9.0",
]

[project.scripts]
zen-nv = "zen_nv.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
