[project]
name = "claude-hooks"
version = "0.1.0"
description = "Fast Claude Code hooks in Python"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
claude-hooks = "claude_hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_hooks"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
