[project]
name = "claude-statusline"
version = "0.2.0"
description = "Custom status line for Claude Code with ML-focused metrics"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "nvitop>=1.6.0",
    "psutil>=7.0.0",
]

[project.scripts]
statusline = "statusline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["statusline.py"]
